# oauth2

./: .env  .gitignore  LICENSE  docker-compose.yaml  oauth-job.nomad  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.cargo/: config.toml
.github/workflows/: build.yaml
crates/backend/: Cargo.toml  Dockerfile  Rocket.toml
crates/backend/src/: database.rs  error.rs  main.rs  state.rs  utils.rs
crates/backend/src/routes/: auth.rs  me.rs  mod.rs
crates/backend/src/routes/auth/: authorize.rs  login.rs  mod.rs  oauth2.rs
crates/backend/src/services/: auth_service.rs
crates/backend/src/utils/: auth.rs
crates/entity/: Cargo.toml
crates/entity/src/: access_token.rs  application.rs  connection.rs  lib.rs  token.rs  user.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20230306_000001_create_users.rs  m20230307_000002_create_tokens.rs  m20230310_000003_create_connections.rs  m20230527_000003_create_applications.rs
