[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxide-auth = "0.5.3"
oxide-auth-rocket = { git = "https://github.com/marekvospel/oxide-auth.git", branch = "deps" }
rocket = { version = "0.5.0-rc.2" }
