[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["serde_json", "json"] }
bcrypt = "0.14.0"
sea-orm-rocket = "0.5.2"
entity = { path = "../entity" }

[dependencies.sea-orm]
version = "0.11.0"
features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres"
]
